# xntricweb.xapi

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  class.py
tests/: test_argparse_translation.py  test_arguments.py  test_end_to_end.py  test_end_to_end_optional.py  test_end_to_end_positional.py  test_entrypoint.py  test_utility.py  test_xapi.py
xntricweb/xapi/: __init__.py  arguments.py  const.py  decorators.py  entrypoint.py  markup.py  utility.py  xapi.py  xapi_argparse.py  xapi_docstring_parser.py
