[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xntricweb-xapi"
dynamic = ["version"]
description = 'Tools for fast terminal application development.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jeremy Calloway", email = "xntricweb@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jeremy Calloway/xntricweb-xapi#readme"
Issues = "https://github.com/Jeremy Calloway/xntricweb-xapi/issues"
Source = "https://github.com/Jeremy Calloway/xntricweb-xapi"

[tool.hatch.version]
path = "xntricweb/xapi/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:xntricweb/xapi tests}"

[tool.hatch.build.targets.wheel]
packages = ["xntricweb"]

[tool.coverage.run]
source_pkgs = ["xntricweb", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
xntricweb_xapi = ["xntricweb"]
tests = ["tests", "tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
